[package]
name = "cli"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
rocket = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = ""

[dependencies.rocket_contrib]
version = "0.4.6"
# path = "../../contrib/lib"
default-features = false
features = ["json"]
