[package]
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
rand = "0.7"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
toml = "0.5.8"

# The "js" is to make sure it also works for the flnode and web crates
getrandom = { version = "0.2.3", features = ["js"] }
names = { path = "../vendor/names" }
anyhow = "1.0.42"
thiserror = "1.0.26"

backtrace = "0.3.61"
futures = "0.3.16"
log = "0.4.14"
sha2 = "0.9.5"
semver = "1.0.4"

ed25519-dalek = { version = "1.0.1", features = ["serde"] }

[dependencies.web-sys]
features = [
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "Navigator",
]
version = "0.3.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"
flexi_logger = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[dev-dependencies]
simple-logging = "2.0.2"
