[package]
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {path = "../modules/types"}
raw = {path = "../modules/raw"}
async-trait = "0.1.51"
rand = "0.7"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
toml = "0.5.8"

# The "js" is to make sure it also works for the flnode and web crates
getrandom = { version = "0.2.3", features = ["js"] }
names = { path = "../vendor/names" }
thiserror = "1.0.26"

futures = "0.3.16"
log = "0.4.14"
sha2 = "0.9.5"

ed25519-dalek = { version = "1.0.1", features = ["serde"] }
timer = "0.2"
itertools = "0.10.3"

[dependencies.web-sys]
features = [
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "Navigator",
]
version = "0.3.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
wasm-timer = "0.2"

[dev-dependencies]
simple-logging = "2.0.2"
tokio = {version = "1", features = ["rt", "macros"]}
# simple_logger = {version = "1.13.0", features = ["stderr"]}
simplelog = "0.10"
anyhow = "1"
flexi_logger = "0.19"
