[package]
name = "flbrowser"
version = "0.8.0"
authors = ["Linus Gasser <ineiti@gasser.blue>"]
edition = "2021"
description = "Web interface for fledger"
repository = "https://github.com/ineiti/fledger"
license = "AGPLv3"

[profile.release]
lto = true
opt-level = 's'

[features]
local = []

[dependencies]
flarch = {path="../flarch", version = "0.8"}
flmodules = {path="../flmodules", version = "0.8"}
flnode = {path = "../flnode", version = "0.8"}

chrono = "0.4"
anyhow = "1"
js-sys = "0.3"
regex = "1"
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
urlencoding = "2"
tokio = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Node',
  'Window',
  'Location',
  'DomTokenList',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

