[package]
name = "flbrowser"
version = "0.9.1"
authors = ["Linus Gasser <ineiti@gasser.blue>"]
edition = "2021"
description = "Web interface for fledger"
repository = "https://github.com/ineiti/fledger"
license = "AGPLv3"

[profile.release]
lto = true
opt-level = 's'

[features]
local = []

[dependencies]
flarch = {path="../flarch", version = "0.9"}
flcrypto = {path="../flcrypto", version = "0.9"}
flmodules = {path="../flmodules", version = "0.9"}
flnode = {path = "../flnode", version = "0.9"}

anyhow = "1"
chrono = "0.4"
console_error_panic_hook = "0.1"
itertools = "0.14"
js-sys = "0.3"
log = "0.4"
names = { version = "0.14", default-features = false }
regex = "1"
tokio = "1"
urlencoding = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Event',
  'HtmlButtonElement',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'HtmlOListElement',
  'HtmlTextAreaElement',
  'Node',
  'Window',
  'Location',
  'DomTokenList',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

