[package]
name = "flcrypto"
version = "0.9.1"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Cryptographic package for different algorithms"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["cryptography", "fledger"]

[features]
testing = []

[dependencies]
flarch = { path = "../flarch", version = "0.9" }
flmacro = { path = "../flmacro", version = "0.9" }

anyhow = {version = "1", features = ["backtrace"]}
async-recursion = "1"
base64 = "*"
bytes = { version = "1", features = ["serde"] }
ed25519-dalek = { version="2", features = ["serde", "rand_core"] }
enum_dispatch = "0.3"
futures = "0.3"
log = "0.4"
# pqcrypto-mldsa = { version = "0.1", features = ["serialization"] }
# pqcrypto-traits = { version = "0.3.5" }
rand = "0.8"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["hex", "json", "base64"] }
serde_yaml = "0.8"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
flcrypto = { path=".", features = ["testing"]}
tokio = "1"

[package.metadata.cargo-udeps.ignore]
development = ["flcrypto"]
