[package]
name = "flmacro"
version = "0.10.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Macros for fledger"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["utils", "fledger"]

[features]
node = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
