[package]
name = "flmodules"
version = "0.8.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Modules used in fledger"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["test", "utils", "fledger"]

[features]
testing = []

[dependencies]
flarch = { path = "../flarch", version = "0.8" }

bimap = "0.6"
getrandom = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
# serde_yaml 0.9 uses tags in yaml, which fails here
serde_yaml = "0.8"
# serde_wtih version 2 doesn't work with old configs
serde_with = { version = "3", features = ["hex", "json", "base64"] }
sha2 = "0.10"
rand = "0.8"
thiserror = "1"
log = "0.4"
itertools = "0.13"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
ed25519-compact = "2"
toml = "0.8"
serde_json = "1"
names = { version = "0.14", default-features = false }
async-stream = "0.3.5"
bytes = { version = "1.7.1", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "stream",
    "rustls-tls",
], default-features = false }
bitflags = { version = "2", features = ["serde"] }
x25519-dalek = {version = "2", features = ["serde"]}
hex = "0.4.3"
bincode = "1.3.3"
sphinx-packet = { path = "../../sphinx" }

rand_distr = "0.4.3"
base64 = "0.22.1"
uuid = "1.1"
prometheus = "0.13.4"
lazy_static = "1.5"

[dev-dependencies]
env_logger = "0.11"
flmodules = {path=".", features = ["testing"]}