[package]
name = "flmodules"
version = "0.10.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Modules used in fledger"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["test", "utils", "fledger"]

[features]
testing = []

[dependencies]
flarch = { path = "../flarch", version = "0.10" }
flcrypto = { path = "../flcrypto", version = "0.10" }
flmacro = { path = "../flmacro", version = "0.10" }

anyhow = { version = "1", features = ["backtrace"] }
async-recursion = "1"
bimap = "0.6"
bitflags = { version = "2", features = ["serde"] }
getrandom = { version = "0.2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
# serde_yaml 0.9 uses tags in yaml, which fails here
serde_yaml = "0.8"
# serde_wtih version 2 doesn't work with old configs
serde_with = { version = "3", features = ["hex", "json", "base64"] }
sha2 = "0.10"
rand = "0.8"
rmp-serde = "1"
thiserror = "2"
log = "0.4"
itertools = "0.14"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
ed25519-compact = { version = "2", features = ["traits"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
serde_json = "1"
names = { version = "0.14", default-features = false }
bytes = { version = "1.7.1", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "stream",
    "rustls-tls",
], default-features = false }
num-bigint = { version = "0.4.6", features = ["serde"] }

[dev-dependencies]
flmodules = { path = ".", features = ["testing"] }
flcrypto = { path = "../flcrypto", features = ["testing"] }
env_logger = "0.11"
