[package]
name = "flnet-libc"
version = "0.1.0"
edition = "2021"
description = "Network implementation for libc"
repository = "https://github.com/ineiti/fledger"
license = "AGPLv3"

[dependencies]
flnet = {path="../flnet"}
flutils = {path="../flutils"}

async-trait = "0.1.51"
async-std = "1.10.0"
webrtc = "0.4.0"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.53"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
log = "0.4.14"
futures = "0.3.21"
thiserror = "1.0.30"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.8"
