[package]
authors = ["Linus Gasser <linus@gasser.blue>"]
categories = ["network-programming"]
description = "Network setup and communication"
edition = "2021"
homepage = "https://fledg.re"
keywords = ["network", "webrtc", "signal", "fledger", "web-rtc"]
license = "MIT OR Apache-2.0"
name = "flnet"
readme = "README.md"
repository = "https://github.com/ineiti/fledger"
version = "0.7.1"

[features]
testing = []
libc = ["native-tls", "rand", "tokio-tungstenite", "webrtc"]
nosend = []
wasm = [
  "nosend",
  "getrandom/js",
  "js-sys",
  "parking_lot",
  "serde-wasm-bindgen",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "web-sys",
]

[dependencies]
flarch = {path = "../flarch", version = "0.7"}
flmodules = {path = "../flmodules", version = "0.7"}

async-trait = "0.1"
bimap = "0.6"
ed25519-compact = "1"
futures = "0.3"
getrandom = {version = "0.2"}
itertools = "0.10"
log = "0.4"
names = "0.14"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
# serde_wtih version 2 doesn't work with old configs
serde_with = {version = "1", features = ["json", "base64"]}
serde_yaml = "0.8"
sha2 = "0.10"
thiserror = "1"
toml = "0.5"
tokio = "1"
tokio-stream = "0.1"

# For libc
native-tls = {version = "0.2", optional = true}
rand = {version = "0.8", optional = true}
tokio-tungstenite = {version = "0.17", features = ["native-tls"], optional = true}
webrtc = {version = "0.5", optional = true}

# For wasm
js-sys = {version = "0.3", optional = true}
# parking_lot 0.12 doesn't compile correctly with wasm
parking_lot = {version = "0.11", features = ["wasm-bindgen"], optional = true}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"], optional = true}
wasm-bindgen-futures = {version = "0.4", optional = true}
serde-wasm-bindgen = {version = "0.4", optional = true}
[dependencies.web-sys]
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Document",
  "Storage",
  "Navigator",
]
optional = true
version = "0.3"

[dev-dependencies]
env_logger = "0.9"
