[package]
authors = ["Linus Gasser <linus@gasser.blue>"]
categories = ["network-programming"]
description = "Network setup and communication"
edition = "2021"
homepage = "https://fledg.re"
keywords = ["network", "webrtc", "signal", "fledger", "web-rtc"]
license = "MIT OR Apache-2.0"
name = "flnet"
readme = "README.md"
repository = "https://github.com/ineiti/fledger"
version = "0.7.2"

[features]
testing = []

[dependencies]
flarch = { path = "../flarch", version = "0.7" }
flmodules = { path = "../flmodules", version = "0.7" }

async-trait = "0.1"
bimap = "0.6"
ed25519-compact = "2"
futures = "0.3"
getrandom = { version = "0.2" }
itertools = "0.13"
log = "0.4"
names = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
# serde_wtih version 2 doesn't work with old configs
serde_with = { version = "3", features = ["json", "base64"] }
# serde_yaml 0.9 uses tags in yaml, which fails here
serde_yaml = "0.8"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
tokio = "1"
tokio-stream = "0.1"

[dev-dependencies]
env_logger = "0.11"
