[package]
name = "flnode"
version = "0.8.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Glue code for flmodules"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["test", "utils", "fledger"]

[dependencies]
flmodules = {path = "../flmodules", version = "0.8"}
flarch = {path = "../flarch", version = "0.8"}

async-trait = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
# serde_yaml 0.9 uses tags in yaml, which fails here
serde_yaml = "0.8"
toml = "0.8"

# The "js" is to make sure it also works for the flnode and web crates
getrandom = { version = "0.2", features = ["js"] }
names = { version = "0.14", default-features = false }
thiserror = "1"
futures = "0.3"
log = "0.4"
sha2 = "0.10"
ed25519-compact = "2"
itertools = "0.13"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio = "1"
