[package]
name = "flutils"
version = "0.1.0"
edition = "2021"
description = "Things for fledger that didn't fit anywhere else"
repository = "https://github.com/ineiti/fledger"
license = "AGPLv3"

[features]
node = []

[dependencies]
thiserror = "1.0.30"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.10.1"
futures = "0.3.19"
chrono = "0.4.19"
log = "0.4.14"
timer = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
wasm-timer = "0.2"
web-sys = {version = "0.3.51",features = ['Window', 'Storage',]}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
flexi_logger = "0.22.3"