[package]
name = "flutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.10.1"
futures = "0.3.19"
chrono = "0.4.19"
log = "0.4.14"
flexi_logger = "0.22.2"
tokio = {version = "1", features = ["rt", "macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
wasm-timer = "0.2"
