[package]
name = "flbrowser-core"
version = "0.1.0"
edition = "2021"
authors = ["Fledger Contributors"]
license = "MIT OR Apache-2.0"
description = "WASM-based browser library for Fledger network"
repository = "https://github.com/ineiti/fledger"

[features]

local = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flnode = { path = "../flnode" }
flarch = { path = "../flarch" }
flmodules = { path = "../flmodules" }
flcrypto = { path = "../flcrypto" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
bytes = "1.11.1"
anyhow = "1.0.101"
async-trait = "0.1.89"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
