[package]
name = "danu"
version = "0.1.0"
edition = "2021"
authors = ["Fledger Contributors"]
license = "MIT OR Apache-2.0"
description = "WASM-based browser library for Fledger network"
repository = "https://github.com/ineiti/fledger"

[features]

local = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flnode = { path = "../flnode" }
flarch = { path = "../flarch" }
flmodules = { path = "../flmodules" }
flcrypto = { path = "../flcrypto" }

anyhow = "1.0.101"
async-trait = "0.1.89"
console_error_panic_hook = "0.1"
bytes = "1.11.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tokio = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["BroadcastChannel", "MessageEvent"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
