[package]
name = "cli"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.0"
tungstenite = "0.12.0"
async-trait = ""
futures = ""
bimap = ""
