[package]
name = "wasm-webrtc"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"

[features]
node = []

[dependencies]
common = {path = "../common"}
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
yew = "0.18.0"
getrandom = { version = "0.2.3", features = ["js"] }
console_error_panic_hook = "0.1.6"

async-trait = "0.1.51"
wasm-bindgen-test = "0.3.24"
wasm-logger = "0.2.0"
log = "0.4.14"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",

  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",

]
