[package]
name = "wasm"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
description = "gtk for WebRTC Fledger communication"
repository = "https://github.com/ineiti/fledger-1-webrtc"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.69"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
]
