[package]
name = "wasm"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
description = "gtk for WebRTC Fledger communication"
repository = "https://github.com/ineiti/fledger-1-webrtc"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[dependencies]
common = {path = "../common"}
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.59"
yew = "0.17"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.46"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcDataChannel",
  "RtcDataChannelEvent",
]
