[package]
name = "fledger-web"
version = "0.1.0"
authors = ["Linus Gasser <ineiti@gasser.blue>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
local = []

[dependencies]
anyhow = "1.0.40"
js-sys = "0.3.46"
regex = "1.4.5"
log = "0.4.14"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.19"
wasm-logger = "0.2.0"
urlencoding = "1.1.1"

wasm-webrtc = {path = "../wasm-webrtc"}
common = {path = "../common"}

[dependencies.web-sys]
version = "0.3.46"
features = [
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
