[package]
name = "fledger-web"
version = "0.1.0"
authors = ["Linus Gasser <ineiti@gasser.blue>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
local = []

[dependencies]
flmodules = {path="../flmodules"}
flutils = {path="../flutils"}
flnet = {path="../flnet"}
chrono = "0.4"
anyhow = "1.0.42"
js-sys = "0.3.51"
regex = "1.5.4"
log = "0.4.14"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
urlencoding = "2.1.0"

wasm-webrtc = {path = "../wasm-webrtc"}
common = {path = "../common"}

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Window',
  'Location'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
